Update z-index issue on PSRecordLocator

--- a/src/aura/PSRecordLocator/PSRecordLocator.css
+++ b/src/aura/PSRecordLocator/PSRecordLocator.css
@@ -1,5 +1,6 @@
 .THIS #mapContainer {
 	position: relative;
+    z-index: 1;
 }
 .THIS #addressDiv {
 	width: 100%; opacity: 0.7; position: absolute; bottom: 0px;  
